# blueprint

./: .flake8  .pre-commit-config.yaml  README.md  config.toml  mkdocs.yml  mypy.ini  pyproject.toml  settings.json
blueprint/: __init__.py  __main__.py  main.py  secret.py
blueprint/modules/: __init__.py  main.py
docs/: index.md  installation.md  usage.md
tests/: test_blueprint.py
