[tool.poetry]
name = "blueprint"
version = "0.3.0"
description = ""
authors = ["Cody Jarrett <cody-jarrett@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.0"
toml = "^0.10.2"
mypy = "^0.950"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.9b0"
isort = "^5.9.3"
mkdocs-material = "^7.3.1"
pre-commit = "^2.15.0"
pytest = "^5.2"
pytest-cov = "^3.0.0"
pyupgrade = "^2.32.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
