[tool.poetry]
name = "blueprint"
version = "0.4.2"
description = ""
authors = ["Cody Jarrett <cody-jarrett@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = "^0.20.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mkdocs-material = "^8.3.8"
mypy = "^0.961"
pre-commit = "^2.15.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyupgrade = "^2.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "blueprint.main:start"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
